Fixed annoying jumping around on the page when clicking reply

--- a/static/forum-minimalist.css
+++ b/static/forum-minimalist.css
@@ -471,3 +471,7 @@ nav ul li {
 	position: relative;
 	top: -100px;
 }
+
+a {
+    cursor: pointer;
+}
